...

    @IBOutlet weak var newsTableView: UITableView!
    private let newsViewModel = NewsViewModel()

    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "News screen"
        
        newsViewModel.delegate = self
        newsTableView.dataSource = self
        newsTableView.delegate = self

        newsViewModel.loadArticles()
...
